Fix Youtube _Transition trailer overflow on mobiles

--- a/less/home.less
+++ b/less/home.less
@@ -20,6 +20,11 @@
 				margin-left: 5%;
 			}
 		}
+		.trailer {
+			iframe {
+				max-width: 90%;
+			}
+		}
 	}
 
 	.showcase {
